# google_analytics_v4_report_flattener

./: Cargo.toml  LICENSE  README.md
benches/: to_delimited.rs  to_row_array.rs
src/: lib.rs  main.rs  report_to_flat.rs  response_to_row_array.rs  to_delimited.rs  to_row_array.rs  types.rs
test_reports/: ex1.json  ex1_resp.json  including_segment.json  large_report.json  multiple_date_ranges.json  multiple_dimensions_and_metrics.json  multiple_reports.json  no_dimensions.json  no_rows.json  single_dimension_and_metric.json  unsupported_feature.json
