[package]
name = "ga_v4_flattener"
version = "0.1.0"
authors = ["Charlie Saunders <charlieasaunders@gmail.com>"]

[dependencies]
itertools = "0.7.8"
failure = "0.1.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
criterion = "0.2.5"
indoc = "0.2"

[[bench]]
name = "to_delimited"
harness = false

[[bench]]
name = "to_row_array"
harness = false